# molecule

./: .ansible-lint  .ansible-lint-ignore  .ansible.cfg  .codespellrc  .containerignore  .coveragerc  .env  .flake8  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.yaml  .packit.yaml  .pre-commit-config.yaml  .prekignore  .prettierignore  .pylintrc  .python-version  .pyup.yml  .readthedocs.yml  .sonarcloud.properties  .style.yapf  .testr.conf  .travis.yml  .yamllint  =0.25.0,2  =3.6.0  ARCHITECTURE.md  AUTHORS.rst  Atom.rbst  CHANGELOG.rst  CONTRIBUTING.rst  Containerfile  DCO_1_1.md  Dockerfile  Gemfile  LICENSE  MANIFEST.in  Makefile  PR_DESCRIPTION.md  (+36 more)
.agents/skills/: README.md
.config/: ansible-lint-ignore.txt  ansible-lint.yaml  constraints.txt  dictionary.txt  molecule.spec  pydoclint-baseline.txt  requirements-docs.txt  requirements-lock.txt  requirements-test.txt  requirements-testinfra.txt  requirements.in  requirements.txt
.config/molecule/: config.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dco.yml  dependabot.yml  main.workflow  patchback.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature_request.md  proposal.md  question.md  security_bug_report.md
.github/workflows/: ack.yml  edit.yml  finalize.yml  push.yml  readiness.yml  redirects.yml  release-drafter.yml  release.yml  tox.yml
asset/: molecule_1.psd
asset/bash_completion/: molecule.bash-completion.sh
assets/: molecule_vert.psd
assets/bash_completion/: molecule.bash-completion.sh
changelog/: README.rst  _template.rst
collections/: README.md  requirements.yml
community.molecule/: LICENSE  README.md  galaxy.yml  pyproject.toml  test-requirements.txt  tox-ansible.ini  tox.ini
community.molecule/changelogs/: config.yaml
community.molecule/changelogs/fragments/: 1-mas-fix-no-app-installed.yml
community.molecule/meta/: execution-environment.yml  runtime.yml
community.molecule/playbooks/: validate.yml
community.molecule/plugins/filter/: __init__.py  from_yaml.yml  get_docker_networks.yml  header.yml  molecule_core.py  to_yaml.yml
community.molecule/tests/integration/: test_integration.py
community.molecule/tests/unit/: test_unit.py
contrib/: convert.py  tokenmgmr.py
demo/molecule/: molecule.yml  playbook.yml
doc/: Makefile  make.bat
doc/source/: authors.rst  bash.rst  ci.rst  command-reference.rst  common-use-cases.rst  conf.py  configuration.rst  development.rst  drivers.rst  examples.rst  faq.rst  get-involved.rst  getting-started.rst  index.rst  indices.rst  installation.rst  installing.rst  porting.rst  requirements.txt  testing.rst  troubleshooting.rst  usage.rst  validator.rst  verifier.rst
docs/: Makefile  README.md  README.rst  ansible-native.md  ci.md  ci.rst  collection.md  conf.py  configuration.md  configuration.rst  contributing.md  contributing.rst  development.rst  docker.md  examples.md  examples.rst  execution.md  faq.md  faq.rst  getting-started-collections.md  getting-started-playbooks.md  getting-started.md  getting-started.rst  index.md  index.rst  installation.md  installation.rst  kubevirt.md  make.bat  next.md  philosophy.md  podman.md  porting.rst  pre-ansible-native.md  quick-start.rst  redirects.yml  requirements.in  requirements.txt  testing.rst  upgrade.rst  (+3 more)
docs/examples/: ansible_native_inventory.md  docker.md  kubevirt.md  podman.md
docs/guides/: AWS-EC2-Driver.md  common-options.md  custom-image.md  docker-rootless.md  inside-a-container.md  monolith.md  parallel.md  podman-inside-docker.md  sharing.md  systemd-container.md
docs/references/: faq.md  porting_guide.md  roadmap.md  usage.md
docs/source/: conf.py  development.rst  index.rst  providers.rst  provisioners.rst  usage.rst
docs/user_guide/: testing_collections.md  testing_roles.md  understanding.md  using_tox_ansible.md
etc/: config.yml
lib/molecule/: __main__.py  config.py  console.py  constants.py  logger.py  platforms.py  scenarios.py  shell.py  state.py  status.py  text.py  util.py
molecule/: __init__.py  __main__.py  ansible_galaxy.py  ansible_galaxy_install.py  ansible_playbook.py  api.py  cli.py  cli2.py  commands.py  config.py  console.py  constants.py  core.py  interpolation.py  logger.py  migrate.py  platforms.py  provisioner.py  provisioners.py  scenario.py  scenarios.py  schema.py  shell.py  state.py  status.py  util.py  utilities.py  validators.py
molecule/Provisioners/: baseprovsioner.py  dockerprovisioner.py  openstackprovisioner.py  proxmoxprovisioner.py  vagrantprovisioner.py
molecule/_vendored/: README.rst
molecule/aws_ec2/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml
molecule/command/: __init__.py  base.py  check.py  cleanup.py  converge.py  create.py  dependency.py  destroy.py  destruct.py  drivers.py  idempotence.py  init.py  lint.py  list.py  login.py  matrix.py  prepare.py  reset.py  side_effect.py  status.py  syntax.py  test.py  verify.py
molecule/commands/: __init__.py  base.py  converge.py  create.py  destroy.py  idempotence.py  init.py  list.py  login.py  status.py  syntax.py  test.py  verify.py
molecule/conf/: defaults.yml
molecule/data/: Dockerfile.j2  lint.yml  validate-dockerfile.yml
molecule/default/: create.yml  destroy.yml
molecule/dependency/: ansible_galaxy.py  base.py  gilt.py  shell.py
molecule/docker/: create.yml  destroy.yml  (+1 more)
playbooks/: pre-run.yaml  snap-pre-run.yaml
snap/: snapcraft.yaml
test/: Vagrantfile  conftest.py  setup.bash
tests/: ansible_inventory  conftest.py  test_ansible_galaxy_install.py  test_ansible_playbook.py  test_cli.py  test_config.py  test_core.py  test_dockerprovisioner.py  test_molecule.py  test_state.py  test_utilities.py  test_validators.py
tools/: Dockerfile.dev  build-containers.py  commands_pre.yml  entrypoint.sh  get-version.sh  molecule.spec  opts.txt  report-coverage  smoketest.sh  test-setup.sh  update-spec.sh  update-version.sh  update_pydoclint.py  vagrant-test-runner.sh
utils/: build-docker.py
zuul.d/: layout.yaml
(+1595 files in other folders)
