[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = molecule
url = https://github.com/ansible-community/molecule
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule/issues
    Release Management = https://github.com/ansible-community/molecule/projects
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/molecule
    Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
    Documentation = https://molecule.readthedocs.io
    Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
    Source Code = https://github.com/ansible-community/molecule
description = Molecule aids in the development and testing of Ansible roles
long_description = file: README.rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    ansible
    roles
    testing
    molecule

[options]
use_scm_version = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    ansible >= 2.8  # keep it N/N-1
    ansible-lint >= 4.1.1a2, < 5

    backports.functools_lru_cache; python_version<"3.3"
    flake8 >=3.6.0
    cerberus >= 1.3.1
    click >= 7.0
    click-completion >= 0.5.1
    colorama >= 0.3.9
    cookiecutter >= 1.6.0
    python-gilt >= 1.2.1, < 2
    Jinja2 >= 2.10.1
    paramiko >= 2.5.0, < 3
    pathlib2; python_version<"3.2"
    pexpect >= 4.6.0, < 5
    pluggy >= 0.7.1, < 1.0
    pre-commit >= 1.17.0, < 2
    PyYAML >= 5.1, < 6
    sh >= 1.12.14
    six >= 1.11.0
    subprocess32; python_version<"3.5"
    tabulate >= 0.8.4
    testinfra >= 3.0.6, < 4
    tree-format >= 0.1.2
    yamllint >= 1.15.0, < 2

[options.extras_require]
docs =
    simplejson
    Sphinx
    sphinx_rtd_theme
docker =
    docker>=2.0.0
    # selinux python module is needed by ansible-docker modules and allows use
    # of isolated (default) virtualenvs. It does not avoid need to install the
    # system selinux libraries but it will provide a clear message when user
    # has to do that.
    selinux; sys_platform=="linux2"
windows =
    pywinrm
test =
    ansi2html
    flake8>=3.6.0, < 4

    mock>=3.0.5, < 4
    pytest-cov>=2.7.1, < 3
    pytest-helpers-namespace>=2019.1.8, < 2020
    pytest-html>=1.21.0,<2.0; python_version < '3.6'
    pytest-html>=1.21.0; python_version >= '3.6'
    pytest-mock>=1.10.4, < 2
    pytest-verbose-parametrize>=1.7.0, < 2
    pytest-sugar>=0.9.2, < 1
    pytest-xdist>=1.29.0, < 2
    pytest>=4.6.3, < 5
    shade>=1.31.0, < 2

[options.entry_points]
console_scripts =
    molecule = molecule.__main__:main
molecule.driver =
    docker = molecule.driver.docker:Docker
    delegated = molecule.driver.delegated:Delegated
    podman = molecule.driver.podman:Podman
molecule.verifier =
    testinfra = molecule.verifier.testinfra:Testinfra
    ansible = molecule.verifier.ansible:Ansible

[options.packages.find]
where = .

[tool:pytest]
addopts = -v -rxXs --doctest-modules --durations 10 --color=yes
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
junit_suite_name = molecule_test_suite
norecursedirs = dist doc build .tox .eggs molecule/test/scenarios molecule/test/resources
testpaths = molecule/test/
filterwarnings =
    # remove once https://github.com/boto/boto3/pull/1603 is released
    ignore::DeprecationWarning:boto3
    # remove once https://github.com/boto/botocore/issues/1615 is released
    ignore::DeprecationWarning:botocore
    # remove once https://github.com/cookiecutter/cookiecutter/pull/1127 is released
    ignore::DeprecationWarning:cookiecutter
    # remove once https://github.com/pytest-dev/pytest-cov/issues/327 is released
    ignore::pytest.PytestWarning:pytest_cov

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D102,D104,D105,D107
# TODO(ssbarnea): remove temporary skips one by one:
# [D101] Missing docstring in public class
# [D102] Missing docstring in public method
# [D104] Missing docstring in public package
# [D105] Missing docstring in magic method
# [D107] Missing docstring in __init__
# [D401] First line should be in imperative mood
# 88 is official black default:
max-line-length = 88
per-file-ignores =
  docs/conf.py: D
  molecule/test/conftest.py: D100,D103
  molecule/test/functional/conftest.py: D100,D103
  molecule/test/functional/docker/test_scenarios.py: D100,D103
  molecule/test/functional/test_command.py: D100,D103
  molecule/test/unit/command/conftest.py: D100,D103
  molecule/test/unit/command/init/test_role.py: D100,D103
  molecule/test/unit/command/init/test_scenario.py: D100,D103
  molecule/test/unit/command/test_base.p: D100,D103
  molecule/test/unit/command/test_base.py: D100,D103
  molecule/test/unit/command/test_check.py: D100,D103
  molecule/test/unit/command/test_cleanup.py: D100,D103
  molecule/test/unit/command/test_converge.py: D100,D103
  molecule/test/unit/command/test_create.py: D100,D103
  molecule/test/unit/command/test_dependency.py: D100,D103
  molecule/test/unit/command/test_destroy.py: D100,D103
  molecule/test/unit/command/test_idempotence.py: D100,D103
  molecule/test/unit/command/test_lint.py: D100,D103
  molecule/test/unit/command/test_list.py: D100,D103
  molecule/test/unit/command/test_login.py: D100,D103
  molecule/test/unit/command/test_prepare.py: D100,D103
  molecule/test/unit/command/test_side_effect.py: D100,D103
  molecule/test/unit/command/test_syntax.py: D100,D103
  molecule/test/unit/command/test_verify.py: D100,D103
  molecule/test/unit/conftest.py: D100,D103
  molecule/test/unit/cookiecutter/test_molecule.py: D100,D103
  molecule/test/unit/dependency/test_ansible_galaxy.py: D100,D103
  molecule/test/unit/dependency/test_gilt.py: D100,D103
  molecule/test/unit/dependency/test_shell.py: D100,D103
  molecule/test/unit/driver/test_delegated.py: D100,D103
  molecule/test/unit/driver/test_docker.py: D100,D103
  molecule/test/unit/lint/test_yamllint.py: D100,D103
  molecule/test/unit/model/v2/test_dependency_section.py: D100,D103
  molecule/test/unit/model/v2/test_driver_section.py: D100,D103
  molecule/test/unit/model/v2/test_lint_section.py: D100,D103
  molecule/test/unit/model/v2/test_platforms_section.py: D100,D103
  molecule/test/unit/model/v2/test_pre_validate.py: D100,D103
  molecule/test/unit/model/v2/test_provisioner_section.py: D100,D103
  molecule/test/unit/model/v2/test_scenario_section.py: D100,D103
  molecule/test/unit/model/v2/test_schema.py: D100,D103
  molecule/test/unit/model/v2/test_verifier_section.py: D100,D103
  molecule/test/unit/provisioner/lint/test_ansible_lint.py: D100,D103
  molecule/test/unit/provisioner/test_ansible.py: D100,D103
  molecule/test/unit/provisioner/test_ansible_playbook.py: D100,D103
  molecule/test/unit/provisioner/test_ansible_playbooks.py: D100,D103
  molecule/test/unit/test_api.py: D100,D103
  molecule/test/unit/test_config.py: D100,D103
  molecule/test/unit/test_interpolation.py: D100,D103
  molecule/test/unit/test_logger.py: D100,D103
  molecule/test/unit/test_platforms.py: D100,D103
  molecule/test/unit/test_scenario.py: D100,D103
  molecule/test/unit/test_scenarios.py: D100,D103
  molecule/test/unit/test_scenarios_ordered.py: D100,D103
  molecule/test/unit/test_shell.py: D100,D103
  molecule/test/unit/test_state.py: D100,D103
  molecule/test/unit/test_status.py: D100,D103
  molecule/test/unit/test_util.py: D100,D103
  molecule/test/unit/verifier/lint/test_ansible_lint.py: D100,D103
  molecule/test/unit/verifier/lint/test_flake8.py: D100,D103
  molecule/test/unit/verifier/lint/test_precommit.py: D100,D103
  molecule/test/unit/verifier/lint/test_yamllint.py: D100,D103
  molecule/test/unit/verifier/test_ansible.py: D100,D103
  molecule/test/unit/verifier/test_testinfra.py: D100,D103
