[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = molecule
url = https://github.com/ansible-community/molecule
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule/issues
    Release Management = https://github.com/ansible-community/molecule/releases
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/molecule
    Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
    Documentation = https://molecule.readthedocs.io
    Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
    Source Code = https://github.com/ansible-community/molecule
description = Molecule aids in the development and testing of Ansible roles
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    ansible
    roles
    testing
    molecule

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    ansible >= 2.8  # keep it N/N-1

    cerberus >= 1.3.1
    click >= 7.0
    click-completion >= 0.5.1
    click-help-colors >= 0.6
    colorama >= 0.3.9
    cookiecutter >= 1.6.0, != 1.7.1
    python-gilt >= 1.2.1, < 2
    Jinja2 >= 2.10.1
    paramiko >= 2.5.0, < 3
    pexpect >= 4.6.0, < 5
    pluggy >= 0.7.1, < 1.0
    PyYAML >= 5.1, < 6
    sh >= 1.12.14
    tabulate >= 0.8.4
    tree-format >= 0.1.2
    yamllint >= 1.15.0, < 2
    # selinux python module is needed as least by ansible-docker/podman modules
    # and allows us of isolated (default) virtualenvs. It does not avoid need
    # to install the system selinux libraries but it will provide a clear
    # message when user has to do that.
    selinux; sys_platform=="linux2"
    selinux; sys_platform=="linux"

[options.extras_require]
docs =
    simplejson
    Sphinx
    sphinx_rtd_theme
docker =
    docker>=2.0.0
windows =
    pywinrm
test =
    ansi2html
    coverage < 5  # https://github.com/pytest-dev/pytest-cov/issues/250

    mock>=3.0.5, < 4
    pytest-cov>=2.7.1, < 3
    pytest-helpers-namespace>=2019.1.8, < 2020
    pytest-html>=1.21.0
    pytest-mock>=1.10.4, < 2
    pytest-verbose-parametrize>=1.7.0, < 2
    pytest-plus
    pytest-xdist>=1.29.0, < 2
    pytest>=5.4.0, < 5.5
    testinfra >= 3.4.0
lint =
    ansible-lint >= 4.2.0, < 5
    flake8 >= 3.6.0
    pre-commit >= 1.21.0
    yamllint >= 1.15.0
hetznercloud =
    molecule-hetznercloud >= 0.2.0, < 1

[options.entry_points]
console_scripts =
    molecule = molecule.__main__:main
molecule.driver =
    docker = molecule.driver.docker:Docker
    delegated = molecule.driver.delegated:Delegated
    podman = molecule.driver.podman:Podman
molecule.verifier =
    testinfra = molecule.verifier.testinfra:Testinfra
    ansible = molecule.verifier.ansible:Ansible

[options.packages.find]
where = .

[tool:pytest]
addopts = -v -rxXs --capture=tee-sys --doctest-modules --durations 10 --color=yes
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
junit_suite_name = molecule_test_suite
norecursedirs = dist doc build .tox .eggs molecule/test/scenarios molecule/test/resources
testpaths = molecule/test/
filterwarnings =
    # remove once https://github.com/boto/boto3/pull/1603 is released
    ignore::DeprecationWarning:boto3
    # remove once https://github.com/boto/botocore/issues/1615 is released
    ignore::DeprecationWarning:botocore
    # remove once https://github.com/cookiecutter/cookiecutter/pull/1127 is released
    ignore::DeprecationWarning:cookiecutter
    # remove once https://github.com/pytest-dev/pytest-cov/issues/327 is released
    ignore::pytest.PytestWarning:pytest_cov
markers =
    extensive: marks tests that we want to skip by default, as they are indirectly covered by other tests

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D102
# TODO(ssbarnea): remove temporary skips one by one:
# [D102] Missing docstring in public method
# [D104] Missing docstring in public package
# 88 is official black default:
max-line-length = 88
per-file-ignores =
  docs/conf.py: D
  molecule/test/*: D100,D103,D104
